--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <distributionManagement>
         <repository>
             <id>endoy</id>
-            <url>https://repo.endoy.dev/artifactory/endoy-public/</url>
+            <url>https://repo.endoy.dev/endoy-public</url>
         </repository>
     </distributionManagement>
 
