--- a/common/pom.xml
+++ b/common/pom.xml
@@ -21,7 +21,7 @@
     <repositories>
         <repository>
             <id>endoy</id>
-            <url>https://repo.endoy.dev/artifactory/endoy-public/</url>
+            <url>https://repo.endoy.dev/endoy-public</url>
         </repository>
     </repositories>
 
